--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.35",
+    "@langchain/openai": "^0.0.16",
+    "langchain": "^0.1.25",
     "@near-wallet-selector/core": "^8.0.0",
     "@near-wallet-selector/modal-ui": "^8.0.0",
     "@near-wallet-selector/my-near-wallet": "^8.0.0",
     "@near-wallet-selector/sender": "^8.0.0",
     "@near-wallet-selector/wallet-connect": "^9.0.2",
     "autoprefixer": "^10.4.17",
+    "dotenv": "^16.5.0",
+    "hnswlib-node": "^1.4.2",
     "near-api-js": "^5.0.0",
     "next": "14.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
