--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@langchain/community": "^0.0.35",
     "@langchain/openai": "^0.0.16",
-    "langchain": "^0.1.25",
     "@near-wallet-selector/core": "^8.0.0",
+    "@near-wallet-selector/meteor-wallet": "^9.0.3",
     "@near-wallet-selector/modal-ui": "^8.0.0",
     "@near-wallet-selector/my-near-wallet": "^8.0.0",
     "@near-wallet-selector/sender": "^8.0.0",
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.17",
     "dotenv": "^16.5.0",
     "hnswlib-node": "^1.4.2",
+    "langchain": "^0.1.25",
     "near-api-js": "^5.0.0",
     "next": "14.1.0",
     "postcss": "^8.4.35",
